[gd_scene load_steps=3 format=3 uid="uid://cxr45g1bffb5w"]

[ext_resource type="Script" path="res://scenes/question_screen.gd" id="1_5g8i4"]
[ext_resource type="Texture2D" uid="uid://b045kf2rp4vw7" path="res://background/russia.jpg" id="1_8r070"]

[node name="QuestionScreen" type="Node"]
script = ExtResource("1_5g8i4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BG" type="TextureRect" parent="CanvasLayer"]
offset_left = -544.0
offset_top = 1.0
offset_right = 1309.0
offset_bottom = 1286.0
texture = ExtResource("1_8r070")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.0
offset_top = 36.0
offset_right = 83.0
offset_bottom = 76.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="QuestionLabel" type="Label" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Question text here..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = 156.0
offset_right = 40.0
offset_bottom = 257.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="AnswerButtonsContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer2"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/PanelContainer2/AnswerButtonsContainer"]
layout_mode = 2
text = "Answer 1"

[node name="Button2" type="Button" parent="CanvasLayer/PanelContainer2/AnswerButtonsContainer"]
layout_mode = 2
text = "Answer 2"

[node name="Button3" type="Button" parent="CanvasLayer/PanelContainer2/AnswerButtonsContainer"]
layout_mode = 2
text = "Answer 3"

[node name="Button4" type="Button" parent="CanvasLayer/PanelContainer2/AnswerButtonsContainer"]
layout_mode = 2
text = "Answer 4"
